<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#bcaaaa"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:textSize="30sp"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_login"
       />



    <EditText
        android:background="#bababa"
        android:textSize="20sp"
        android:id="@+id/logInEmail_id"
        android:inputType="textEmailAddress"
        android:padding="7dp"
        android:hint="@string/please_enter_email"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <EditText
        android:textSize="20sp"
        android:padding="7dp"
        android:background="#bababa"
        android:layout_marginTop="10dp"
        android:id="@+id/logInPassword_id"
        android:inputType="numberPassword"
        android:hint="@string/please_enter_password"
        android:layout_width="match_parent"
        android:layout_height="50dp" />


    <Button
        android:id="@+id/logIn_id"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:text="@string/log_in"
        android:padding="6dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>