<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<ImageView
    android:id="@+id/imageViewID"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:background="@mipmap/ic_launcher"
    android:layout_gravity="center"/>
    <Button
        android:id="@+id/captureID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture"
        android:layout_gravity="center" />
    <Button
        android:id="@+id/saveID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_db"
        android:layout_gravity="center"/>

    <Button
        android:onClick="LogInButton"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_gravity="center"/>



</LinearLayout>